feat(*): Upgrade to Angular 11 (#203)
- Updgrade to Angular 11
- Update docs

BREAKING CHANGE: The upgrade to Angular 11 breaks compatibility with Angular 10.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build:demo": "ng build angular-notifier-demo --prod",
     "build:library": "rimraf -r dist && npm run build:library:angular && npm run build:library:sass && npm run build:library:css && npm run build:library:docs && npm run build:library:package",
     "build:library:angular": "ng build angular-notifier --prod",
-    "build:library:css": "node-sass projects/angular-notifier/src --output dist/angular-notifier --output-style expanded",
+    "build:library:css": "sass projects/angular-notifier/src:dist/angular-notifier --style=expanded",
     "build:library:docs": "copyfiles \"docs/**\" CHANGELOG.md MIGRATION-GUIDE.md LICENSE README.md \"dist/angular-notifier\"",
     "build:library:package": "node tools/update-package.js",
     "build:library:sass": "copyfiles \"projects/angular-notifier/src/**/*.scss\" \"dist/angular-notifier\" --up 3",
@@ -38,21 +38,20 @@
     "tslib": "2.0.x"
   },
   "peerDependencies": {
-    "@angular/common": ">= 10.0.0 < 11.0.0",
-    "@angular/core": ">= 10.0.0 < 11.0.0",
+    "@angular/common": ">= 11.0.0 < 12.0.0",
+    "@angular/core": ">= 11.0.0 < 12.0.0",
     "rxjs": ">= 6.0.0 < 7.0.0"
   },
   "devDependencies": {
-    "@angular-builders/jest": "10.0.x",
-    "@angular-devkit/build-angular": "0.1002.x",
-    "@angular-devkit/build-ng-packagr": "0.1002.x",
-    "@angular/cli": "10.2.x",
-    "@angular/common": "10.2.x",
-    "@angular/compiler-cli": "10.2.x",
-    "@angular/compiler": "10.2.x",
-    "@angular/core": "10.2.x",
-    "@angular/platform-browser-dynamic": "10.2.x",
-    "@angular/platform-browser": "10.2.x",
+    "@angular-builders/jest": "11.1.x",
+    "@angular-devkit/build-angular": "0.1102.x",
+    "@angular/cli": "11.2.x",
+    "@angular/common": "11.2.x",
+    "@angular/compiler-cli": "11.2.x",
+    "@angular/compiler": "11.2.x",
+    "@angular/core": "11.2.x",
+    "@angular/platform-browser-dynamic": "11.2.x",
+    "@angular/platform-browser": "11.2.x",
     "@typescript-eslint/eslint-plugin": "4.17.x",
     "@typescript-eslint/parser": "4.17.x",
     "@types/jest": "26.0.x",
@@ -66,13 +65,13 @@
     "eslint-plugin-simple-import-sort": "7.0.x",
     "eslint": "7.21.x",
     "jest": "26.6.x",
-    "ng-packagr": "10.1.x",
-    "node-sass": "4.14.x",
+    "ng-packagr": "11.2.x",
     "prettier": "2.2.x",
     "rimraf": "3.0.x",
     "rxjs": "6.6.x",
+    "sass": "1.32.x",
     "ts-node": "9.1.x",
-    "typescript": "4.0.x",
+    "typescript": "4.1.x",
     "web-animations-js": "2.3.x",
     "zone.js": "0.10.x"
   }
