--- a/angular.json
+++ b/angular.json
@@ -9,7 +9,7 @@
       "sourceRoot": "projects/angular-notifier/src",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/angular-notifier/tsconfig.lib.json",
             "project": "projects/angular-notifier/ng-package.json"
@@ -57,7 +57,6 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "extractLicenses": false,
               "vendorChunk": false,
