--- a/projects/angular-notifier/tsconfig.spec.json
+++ b/projects/angular-notifier/tsconfig.spec.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
     "outDir": "../../out-tsc/spec",
     "types": ["jest", "node"]
   },
