--- a/package.json
+++ b/package.json
@@ -52,26 +52,26 @@
     "@angular/core": "12.2.16",
     "@angular/platform-browser": "12.2.16",
     "@angular/platform-browser-dynamic": "12.2.16",
-    "@types/jest": "26.0.x",
-    "@types/node": "12.11.x",
-    "@types/web-animations-js": "2.2.x",
-    "@typescript-eslint/eslint-plugin": "4.17.x",
-    "@typescript-eslint/parser": "4.17.x",
-    "codecov": "3.8.x",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.14",
+    "@types/web-animations-js": "^2.2.12",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "codecov": "^3.8.3",
     "copyfiles": "2.4.x",
-    "eslint": "7.21.x",
-    "eslint-config-prettier": "7.2.x",
-    "eslint-plugin-import": "2.22.x",
-    "eslint-plugin-prettier": "3.3.x",
+    "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "7.0.x",
-    "jest": "26.6.x",
-    "ng-packagr": "12.2.7",
-    "prettier": "2.2.x",
+    "jest": "^27.4.7",
+    "ng-packagr": "^12.2.7",
+    "prettier": "^2.5.1",
     "rimraf": "3.0.x",
     "rxjs": "6.6.x",
-    "sass": "1.32.x",
-    "ts-node": "9.1.x",
-    "typescript": "4.3.5",
+    "sass": "^1.49.4",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.3.5",
     "web-animations-js": "2.3.x",
     "zone.js": "~0.11.4"
   }
