--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,3 +26,4 @@ jobs:
       with:
         token: ${{ secrets.NPM_TOKEN }}
         package: ./dist/angular-notifier/package.json
+        access: public
