feat(*): Upgrade to Angular 13, enable partial-Ivy compilation (#235)
- Updgrade to Angular 13, enable partial-Ivy compilation
- Remove polyfills
- Update README

BREAKING CHANGE: The upgrade to Angular 13 breaks compatibility with Angular 12. The library is now published as partial-Ivy code.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/.angular/cache
+
 # Created by https://www.toptal.com/developers/gitignore/api/node,vscode
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,vscode
 
