--- a/projects/angular-notifier/jest.config.json
+++ b/projects/angular-notifier/jest.config.json
@@ -1,5 +1,6 @@
 {
   "collectCoverage": true,
+  "roots": ["./projects/angular-notifier"],
   "setupFilesAfterEnv": ["./projects/angular-notifier/jest.setup.ts"],
   "verbose": true
 }
