--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,3 +11,6 @@ updates:
   target-branch: "develop"
   labels:
   - dependencies
+  ignore:
+  - dependency-name: "@angular/*"
+  - dependency-name: "karma"
