--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,5 +12,5 @@ updates:
   labels:
   - dependencies
   ignore:
-  - dependency-name: "@angular/*"
+  - dependency-name: "@angular*"
   - dependency-name: "karma"
