--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,29 +1,37 @@
-name: Release
+name: Publish
 
 on:
-  push:
-    branches: [master]
+  workflow_dispatch:
+  schedule:
+    - cron: '0 9 * * *'
 
 jobs:
-  publish-to-npm:
-    name: Publish to npm
-    runs-on: ubuntu-20.04
+  run:
+    name: Publish
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Setup NodeJS
-      uses: actions/setup-node@v2
-      with:
-        node-version: 14.15.x
-        registry-url: 'https://registry.npmjs.org'
-    - name: Install dependencies
-      run: npm ci
-    - name: Build library
-      run: npm run build:library
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 16
+      - run: npm install
+
+    - run: npm run build:library
       
-    - name: Publish to npm
-      uses: JS-DevTools/npm-publish@v1
-      with:
-        token: ${{ secrets.NPM_TOKEN }}
-        package: ./dist/angular-notifier/package.json
-        access: public
+      - uses: codfish/semantic-release-action@v1
+        with:
+          plugins: |
+            [
+              "@semantic-release/commit-analyzer",
+              "@semantic-release/release-notes-generator",
+              [
+                "@semantic-release/npm", {
+                  "pkgRoot": "dist/angular-notifier"
+                }
+              ],
+              "@semantic-release/github"
+            ]
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+        continue-on-error: true
