--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "angular-notifier",
+  "name": "angular-notifier-updated",
   "description": "A well designed, fully animated, highly customizable, and easy-to-use notification library for your Angular application.",
-  "version": "11.1.0",
+  "version": "0.0.0-semantic-release",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/itzrabbs/angular-notifier"
+    "url": "https://github.com/dominique-mueller/angular-notifier"
   },
   "keywords": [
     "angular",
