fix: release branch

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: codfish/semantic-release-action@v1
         with:
           repository_url: https://github.com/itzrabbs/angular-notifier.git
+          branch: develop
           plugins: |
             [
               "@semantic-release/commit-analyzer",
