chore: Update release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Publish
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 9 * * *'
+    - cron: "0 9 * * *"
 
 jobs:
   run:
@@ -17,10 +17,10 @@ jobs:
       - run: npm install
 
       - run: npm run build:library
-      
+
       - uses: codfish/semantic-release-action@v1
         with:
-          repository_url: https://github.com/itzrabbs/angular-notifier.git
+          repository_url: https://github.com/${{github.REPOSITORY}}.git
           branch: develop
           plugins: |
             [
