--- a/package.json
+++ b/package.json
@@ -34,18 +34,17 @@
     "test:library": "ng test angular-notifier",
     "test:library:upload-coverage": "codecov -f coverage/coverage-final.json"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@angular-builders/jest": "~13.0.3",
-    "@angular-devkit/build-angular": "~13.3.7",
-    "@angular/cli": "~13.3.7",
-    "@angular/common": "~13.3.10",
-    "@angular/compiler": "~13.3.10",
-    "@angular/compiler-cli": "~13.3.10",
-    "@angular/core": "~13.3.10",
-    "@angular/platform-browser": "~13.3.10",
-    "@angular/platform-browser-dynamic": "~13.3.10",
-    "@types/jest": "^27.4.0",
+    "@angular-builders/jest": "^14.0.0",
+    "@angular-devkit/build-angular": "^14.0.1",
+    "@angular/cli": "^14.0.1",
+    "@angular/common": "^14.0.1",
+    "@angular/compiler": "^14.0.1",
+    "@angular/compiler-cli": "^14.0.1",
+    "@angular/core": "^14.0.1",
+    "@angular/platform-browser": "^14.0.1",
+    "@angular/platform-browser-dynamic": "^14.0.1",
+    "@types/jest": "^28.1.2",
     "@types/node": "^18.0.0",
     "@types/web-animations-js": "^2.2.12",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
@@ -57,15 +56,15 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "jest": "^27.4.7",
-    "ng-packagr": "^13.2.1",
+    "jest": "^28.1.1",
+    "ng-packagr": "^14.0.2",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "rxjs": "~7.5.x",
     "sass": "^1.52.3",
     "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
-    "typescript": "~4.6.3",
+    "typescript": "^4.7.3",
     "zone.js": "~0.11.6"
   }
 }
