--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,18 +1,20 @@
 version: 2
 updates:
   - package-ecosystem: npm
-    directory: "/"
+    directory: '/'
     schedule:
       interval: daily
-      time: "03:00"
+      time: '03:00'
       timezone: America/New_York
     open-pull-requests-limit: 10
     versioning-strategy: increase
-    target-branch: "master"
+    target-branch: 'master'
     labels:
       - dependencies
     ignore:
-      - dependency-name: "@angular*"
+      - dependency-name: '@angular*'
+      - dependency-name: '@types/jest'
+      - dependency-name: 'jest*'
     commit-message:
       prefix: fix
       prefix-development: chore
