--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "test:library:upload-coverage": "codecov -f coverage/coverage-final.json"
   },
   "devDependencies": {
-    "@angular-builders/jest": "^14.0.0",
+    "@angular-builders/jest": "^14.0.1",
     "@angular-devkit/build-angular": "^14.2.1",
     "@angular-eslint/builder": "14.0.3",
     "@angular-eslint/eslint-plugin": "14.0.3",
@@ -50,26 +50,27 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@types/jest": "^28.1.8",
-    "@types/node": "^18.7.14",
+    "@types/node": "^18.7.15",
     "@types/web-animations-js": "^2.2.12",
-    "@typescript-eslint/eslint-plugin": "5.35.1",
-    "@typescript-eslint/parser": "5.35.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "codecov": "^3.8.3",
     "copyfiles": "^2.4.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "jest": "^28.1.3",
+    "jest-preset-angular": "^12.2.2",
     "ng-packagr": "^14.2.0",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "rxjs": "~7.5.x",
-    "sass": "^1.54.6",
+    "sass": "^1.54.8",
     "ts-node": "^10.9.1",
     "tslib": "^2.3.1",
-    "typescript": "^4.7.4",
+    "typescript": "^4.8.2",
     "zone.js": "~0.11.8"
   }
 }
