--- a/package.json
+++ b/package.json
@@ -35,34 +35,34 @@
     "test:library:upload-coverage": "codecov -f coverage/coverage-final.json"
   },
   "devDependencies": {
-    "@angular-builders/jest": "^15.0.0",
-    "@angular-devkit/build-angular": "^15.2.7",
-    "@angular-eslint/builder": "15.2.1",
-    "@angular-eslint/eslint-plugin": "15.2.1",
-    "@angular-eslint/eslint-plugin-template": "15.2.1",
-    "@angular-eslint/schematics": "15.2.1",
-    "@angular-eslint/template-parser": "15.2.1",
-    "@angular/cli": "^15.2.7",
-    "@angular/common": "^15.2.8",
-    "@angular/compiler": "^15.2.8",
-    "@angular/compiler-cli": "^15.2.8",
-    "@angular/core": "^15.2.8",
-    "@angular/platform-browser": "^15.2.8",
-    "@angular/platform-browser-dynamic": "^15.2.8",
-    "@types/jest": "^28.1.8",
+    "@angular-builders/jest": "^16.0.0-beta.3",
+    "@angular-devkit/build-angular": "^16.0.3",
+    "@angular-eslint/builder": "16.0.2",
+    "@angular-eslint/eslint-plugin": "16.0.2",
+    "@angular-eslint/eslint-plugin-template": "16.0.2",
+    "@angular-eslint/schematics": "16.0.2",
+    "@angular-eslint/template-parser": "16.0.2",
+    "@angular/cli": "^16.0.3",
+    "@angular/common": "^16.0.3",
+    "@angular/compiler": "^16.0.3",
+    "@angular/compiler-cli": "^16.0.3",
+    "@angular/core": "^16.0.3",
+    "@angular/platform-browser": "^16.0.3",
+    "@angular/platform-browser-dynamic": "^16.0.3",
+    "@types/jest": "^29.5.1",
     "@types/node": "^20.2.5",
     "@types/web-animations-js": "^2.2.13",
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "codecov": "^3.8.3",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.41.0",
+    "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "jest": "^28.1.3",
-    "ng-packagr": "^15.2.2",
+    "jest": "^29.5.0",
+    "ng-packagr": "^16.0.1",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
     "rxjs": "~7.8.x",
