--- a/.github/workflows/master.cron.publish.yml
+++ b/.github/workflows/master.cron.publish.yml
@@ -20,10 +20,10 @@ jobs:
 
       - run: npm run build:library
 
-      - uses: codfish/semantic-release-action@v1
+      - uses: codfish/semantic-release-action@v2
         with:
           repository_url: https://github.com/${{github.REPOSITORY}}.git
-          branch: master
+          branches: master
           plugins: |
             [
               "@semantic-release/commit-analyzer",
