--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,6 +13,8 @@ updates:
       - dependencies
     ignore:
       - dependency-name: '@angular*'
+      - dependency-name: 'typescript'
+        versions: ['>=5.2.0']
     commit-message:
       prefix: fix
       prefix-development: chore
