--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,6 +13,7 @@ updates:
       - dependencies
     ignore:
       - dependency-name: '@angular*'
+      - dependency-name: 'ng-packagr'
       - dependency-name: 'typescript'
         versions: ['>=5.2.0']
     commit-message:
