--- a/angular.json
+++ b/angular.json
@@ -83,11 +83,11 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-notifier-demo:build"
+            "buildTarget": "angular-notifier-demo:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular-notifier-demo:build:production"
+              "buildTarget": "angular-notifier-demo:build:production"
             }
           }
         }
