--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   ],
   "scripts": {
     "build:demo": "ng build angular-notifier-demo --configuration production",
-    "build:library": "rimraf dist && npm run build:library:angular && npm run build:library:sass && npm run build:library:css && npm run build:library:docs && npm run build:library:package",
+    "build:library": "rm -rf dist && npm run build:library:angular && npm run build:library:sass && npm run build:library:css && npm run build:library:docs && npm run build:library:package",
     "build:library:angular": "ng build angular-notifier --configuration production",
     "build:library:css": "sass projects/angular-notifier/src:dist/angular-notifier --style=expanded",
     "build:library:docs": "copyfiles \"docs/**\" CHANGELOG.md MIGRATION-GUIDE.md LICENSE README.md \"dist/angular-notifier\"",
@@ -61,7 +61,6 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "jest": "^29.7.0",
     "ng-packagr": "^17.0.2",
-    "rimraf": "^5.0.5",
     "rxjs": "~7.8.x",
     "sass": "^1.74.1",
     "ts-node": "^10.9.2",
