--- a/package.json
+++ b/package.json
@@ -35,20 +35,20 @@
     "test:library:upload-coverage": "codecov -f coverage/coverage-final.json"
   },
   "devDependencies": {
-    "@angular-builders/jest": "^17.0.0",
-    "@angular-devkit/build-angular": "^17.3.7",
-    "@angular-eslint/builder": "17.4.1",
-    "@angular-eslint/eslint-plugin": "17.4.1",
-    "@angular-eslint/eslint-plugin-template": "17.4.1",
-    "@angular-eslint/schematics": "17.4.1",
-    "@angular-eslint/template-parser": "17.4.1",
-    "@angular/cli": "^17.3.7",
-    "@angular/common": "^17.3.9",
-    "@angular/compiler": "^17.3.9",
-    "@angular/compiler-cli": "^17.3.9",
-    "@angular/core": "^17.3.9",
-    "@angular/platform-browser": "^17.3.9",
-    "@angular/platform-browser-dynamic": "^17.3.9",
+    "@angular-builders/jest": "^18.0.0",
+    "@angular-devkit/build-angular": "^18.1.4",
+    "@angular-eslint/builder": "18.2.0",
+    "@angular-eslint/eslint-plugin": "18.2.0",
+    "@angular-eslint/eslint-plugin-template": "18.2.0",
+    "@angular-eslint/schematics": "18.2.0",
+    "@angular-eslint/template-parser": "18.2.0",
+    "@angular/cli": "^18.1.4",
+    "@angular/common": "^18.1.4",
+    "@angular/compiler": "^18.1.4",
+    "@angular/compiler-cli": "^18.1.4",
+    "@angular/core": "^18.1.4",
+    "@angular/platform-browser": "^18.1.4",
+    "@angular/platform-browser-dynamic": "^18.1.4",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.2.0",
     "@types/web-animations-js": "^2.2.16",
@@ -60,12 +60,12 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "jest": "^29.7.0",
-    "ng-packagr": "^17.0.2",
-    "rxjs": "~7.8.x",
+    "ng-packagr": "^18.1.0",
+    "rxjs": "~7.8.1",
     "sass": "^1.77.8",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2",
-    "zone.js": "~0.14.4"
+    "typescript": "^5.5.4",
+    "zone.js": "~0.14.10"
   }
 }
