--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "build:library:docs": "copyfiles \"docs/**\" CHANGELOG.md MIGRATION-GUIDE.md LICENSE README.md \"dist/angular-notifier\"",
     "build:library:package": "node tools/update-package.js",
     "build:library:sass": "copyfiles \"projects/angular-notifier/src/**/*.scss\" \"dist/angular-notifier\" --up 3",
-    "lint:library": "eslint projects/angular-notifier/src/**/*.ts --max-warnings 0",
-    "lint:library:fix": "eslint projects/angular-notifier/src/**/*.ts --max-warnings 0 --fix",
+    "lint:library": "eslint",
+    "lint:library:fix": "eslint --fix",
     "start": "ng serve angular-notifier-demo",
     "test:library": "ng test angular-notifier",
     "test:library:upload-coverage": "codecov -f coverage/coverage-final.json"
@@ -52,13 +52,11 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^22.2.0",
     "@types/web-animations-js": "^2.2.16",
-    "@typescript-eslint/eslint-plugin": "^7.5.0",
-    "@typescript-eslint/parser": "^7.5.0",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
     "codecov": "^3.8.3",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "eslint": "^9.10.0",
     "jest": "^29.7.0",
     "ng-packagr": "^18.1.0",
     "rxjs": "~7.8.1",
@@ -66,6 +64,7 @@
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
     "typescript": "^5.5.4",
+    "typescript-eslint": "^8.5.0",
     "zone.js": "~0.14.10"
   }
 }
